<resources>
    <string name="app_name">Book Store App</string>

    <string name="number_of_rows">Number of rows in books database table:\u0020</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Books</string>
    <string name="activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit a Book</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving a book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating a book</string>
    <string name="unknown_supplier">Unknown supplier</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="empty_view_title_text">Empty Database...</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order">Order</string>
    <string name="sold">Sold</string>

    <string name="category_overview">Overview</string>
    <string name="hint_book_name">Name</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_price">Price</string>
    <string name="category_contact">Contact</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="hint_book_price">Price</string>
    <string name="hint_supplier_phone">Phone</string>
    <string name="unit_currency">$</string>

    <string name="enter_valid_name">Enter a valid name</string>
    <string name="enter_valid_supplier">Enter a valid supplier</string>
    <string name="enter_valid_quantity">Enter a valid quantity</string>
    <string name="enter_valid_price">Enter a valid price</string>
    <string name="enter_valid_phone">Enter a valid phone</string>

</resources>
